# xfce4-appfinder

./: .gitignore  AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  configure  configure.ac  configure.ac.in  configure.in.in  meson.build  module.xml  xfce4-appfinder.spec.in
.gitlab/merge_request_templates/: default.md
data/: Makefile.am  meson.build  org.xfce.xfce4-appfinder.appdata.xml.in  xfce4-appfinder.appdata.xml.in  xfce4-appfinder.desktop.in  xfce4-run.desktop.in
data/icons/: Makefile.am  meson.build
data/icons/128x128/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
doc/: Makefile.am  Makefile.in
doc/C/: Makefile.am  Makefile.in  xfce4-appfinder.html  xfce4-appfinder.xml
doc/C/images/: Makefile.am  Makefile.in
doc/fr/: Makefile.am  Makefile.in  xfce4-appfinder.html  xfce4-appfinder.xml
doc/fr/images/: Makefile.am  Makefile.in
doc/he/: Makefile.am  xfce4-appfinder.html  xfce4-appfinder.xml
doc/he/images/: Makefile.am
po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  af.po  am.po  ar.po  ast.po  be.gmo  be.po  bg.po  bn.po  bn_IN.po  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  dz.po  el.po  el_GR.gmo  el_GR.po  en_AU.po  en_CA.po  en_GB.gmo  en_GB.po  eo.po  es.po  es_MX.gmo  es_MX.po  et.gmo  et.po  eu.gmo  eu.po  fa.gmo  fa.po  fi.gmo  (+75 more)
src/: Makefile.am  Makefile.in  af-constants.h  appfinder-actions.c  appfinder-actions.h  appfinder-category-model.c  appfinder-category-model.h  appfinder-gdbus.c  appfinder-gdbus.h  appfinder-model.c  appfinder-model.h  appfinder-preferences-ui.gresource.xml  appfinder-preferences.c  appfinder-preferences.glade  appfinder-preferences.h  appfinder-private.h  appfinder-window.c  appfinder-window.h  appfinder.c  appfinder.gresource.xml  appfinder.h  callbacks.c  callbacks.h  frap-icon-entry.c  frap-icon-entry.h  inline-icon.h  main.c  main.h  meson.build  xfce-appfinder-window.c  xfce-appfinder-window.h  xfce4-appfinder.c  xfce4-appfinder.desktop  xfce4-appfinder.desktop.in  xfce4-appfinder.h
